--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 ariadne = { version = "0.5.1", features = ["auto-color"] }
+clap = { version = "4.5.35", features = ["derive"] }
 dot = "0.1.4"
 snafu = "0.8.5"
