--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 ariadne = { version = "0.5.1", features = ["auto-color"] }
 clap = { version = "4.5.35", features = ["derive"] }
 dot = "0.1.4"
+rand = "0.9.0"
 snafu = "0.8.5"
 
 [lints.clippy]
